welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:7: error: value update is not a member of java.awt.Color
		getCouleurSol()=T(i);
                ^