welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {
	var h=getMondeHauteur() 
	var l=getMondeLargeur()
	var T=new Array[Int](h)
	for (i <- 0 to h-1) {
		getCouleurSol()=T(i);
		avance();
		}
	
}
